# esp_naive_power_switch

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: binary_protocol.md  hardware_wiring.md
main/: CMakeLists.txt  Kconfig.projbuild  power_switch_main.c
tools/: power_switch_client.py
